debhelper.pod: Use 0x7f to filter the signal name
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -634,7 +634,7 @@ the set command):
   EOF
   if (system($temp)) {
      my $exit_code = ($? >> 8) & 0xff;
-     my $signal = $? & 0xff;
+     my $signal = $? & 0x7f;
      if ($exit_code) {
          die("The debhelper script failed with error code: ${exit_code}");
      } else {
