dh_installdirs.1: Document that it can often be omitted
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     --max-parallel=1 but may be more intuative to some people.
   * dh_makeshlibs: Use a noawait trigger to invoke ldconfig
     rather maintscripts.
+  * dh_installdirs.1: Add a note that many packages will work
+    fine without calling dh_installdirs.  (Closes: #748993)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
