Dh_Lib: Export an env var before running +x scripts
In order to let executable scripts discover what package is being built,
so they can avoid side-effects in case a package is to be skipped,
export DH_CONFIG_ACT_ON_PACKAGES before running them.

This, along with changes to dh-exec, will close #698054.

Signed-off-by: Gergely Nagy <algernon@madhouse-project.org>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,11 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh_compress: Apply patch from Rafael Kitover to support
     passing files to dh_compress that would have been
     compressed anyway.  (Closes: #794898)
+  * Dh_Lib: Apply patch from Gergely Nagy to make debhelper
+    export "DH_CONFIG_ACT_ON_PACKAGES" when executing an
+    executable debhelper config file.  This is intended to
+    assist dh-exec (etc.) in figuring what packages are
+    acted on.  (Closes: #698054)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
