dh_movefiles: Support globs in cmd-line arguments
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     executable debhelper config file.  This is intended to
     assist dh-exec (etc.) in figuring what packages are
     acted on.  (Closes: #698054)
+  * dh_movefiles: Expand globs in arguments passed in all
+    compat levels (and not just compat 1 and 2).
+    (Closes: #800332)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
