--- a/debian/changelog
+++ b/debian/changelog
@@ -30,7 +30,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     when "-V" is passed to dpkg-gencontrol.  This relies on
     dpkg-deb getting everything but the extension correct
     (see #575059, #452273 for why it does not produce the
-     correct extesion).  (Closes: #516721, #677353)
+     correct extesion).
+    (Closes: #516721, #677353, #672282)
   * Dh_Lib.pm: Drop now unused "udeb_filename" subroutine.
   * dh_strip.1: Correct the documentation about ddebs to
     reflect the current implementation (rather than the
