--- a/debian/changelog
+++ b/debian/changelog
@@ -91,6 +91,10 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     always chdir back to the original directory even if the
     subprocess exits non-zero.  (Closes: #798116)
 
+  [ Translations ]
+  * Update Portuguese translation (Américo Monteiro)
+    (Closes: #790820)
+
  -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200
 
 debhelper (9.20150811) unstable; urgency=medium
