dh_installinit: Document that --onlyscripts should be used with -p
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh_movefiles: Expand globs in arguments passed in all
     compat levels (and not just compat 1 and 2).
     (Closes: #800332)
+  * dh_installinit: Clearly document that --onlyscripts
+    should generally be used with -p (or similar) to limit
+    the number of affected packages.  (Closes: #795193)
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
