qmake.pm: mkdir builddir before starting to configure
Closes: #800738

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ debhelper (9.20151005) unstable; urgency=medium
     (Closes: #188028)
   * cmake.pm: Apply patch from Jonathan Hall to fix an
     accidental error hiding.  (Closes: #802984)
+  * qmake.pm: Apply patch from Sergio Durigan Junior to
+    create the build dir if it doesn't exist.
+    (Closes: #800738)
 
   [ Translations ]
   * Update German translation (Chris Leick)
