--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151004) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh/dh_auto_*: Apply patch from Eduard Sanou to define
@@ -58,7 +58,7 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh,Buildsytems: In compat 10, default to --parallel.
   * dh,Buildsytems: Accept "--no-parallel" to disable
     parallel builds.  It is effectively the same as using
-    --max-parallel=1 but may be more intuative to some people.
+    --max-parallel=1 but may be more intuitive to some people.
   * dh_makeshlibs: Use a noawait trigger to invoke ldconfig
     rather maintscripts.
   * dh_installdirs.1: Add a note that many packages will work
@@ -98,7 +98,7 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #790820)
 
- -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200
+ -- Niels Thykier <niels@thykier.net>  Sun, 04 Oct 2015 17:34:16 +0200
 
 debhelper (9.20150811) unstable; urgency=medium
 
