--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20151004+unreleased) UNRELEASED; urgency=medium
+
+  * dh_strip: Sort build-ids to make the Build-Ids header
+    reproducible.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 04 Oct 2015 20:50:41 +0200
+
 debhelper (9.20151004) unstable; urgency=medium
 
   [ Niels Thykier ]
