Dh_Lib: Respect --no-act in autotrigger
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debhelper (9.20151004+unreleased) UNRELEASED; urgency=medium
 
   * dh_strip: Sort build-ids to make the Build-Ids header
     reproducible.
+  * Dh_Lib.pm: Respect --no-act in autotrigger, thanks to
+    Andreas Henriksson and Helmut Grohne for reporting
+    the issue.  (Closes: #800919)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Oct 2015 20:50:41 +0200
 
