--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20151004+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20151005) unstable; urgency=medium
 
   * dh_strip: Sort build-ids to make the Build-Ids header
     reproducible.
@@ -6,7 +6,7 @@ debhelper (9.20151004+unreleased) UNRELEASED; urgency=medium
     Andreas Henriksson and Helmut Grohne for reporting
     the issue.  (Closes: #800919)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 04 Oct 2015 20:50:41 +0200
+ -- Niels Thykier <niels@thykier.net>  Mon, 05 Oct 2015 08:33:26 +0200
 
 debhelper (9.20151004) unstable; urgency=medium
 
