Fix typos found during translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -767,7 +767,7 @@ msgstr ""
 #| "If this option is not specified, debhelper currently defaults to not "
 #| "allowing parallel package builds."
 msgid ""
-"If neither option are not specified, debhelper currently defaults to B<--"
+"If neither option is specified, debhelper currently defaults to B<--"
 "parallel> in compat 10 (or later) and B<--no-parallel> otherwise."
 msgstr ""
 "Si no se define esta opción, debhelper no permitirá la construcción en "
@@ -1682,11 +1682,11 @@ msgstr "udebs"
 #. type: textblock
 #: debhelper.pod:680
 msgid ""
-"Debhelper includes support for udebs. To create a udeb with debhelper, add "
+"Debhelper includes support for udebs. To create an udeb with debhelper, add "
 "\"B<Package-Type: udeb>\" to the package's stanza in F<debian/control>.  "
 "Debhelper will try to create udebs that comply with debian-installer policy, "
 "by making the generated package files end in F<.udeb>, not installing any "
-"documentation into a udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
+"documentation into an udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
 "and F<config> scripts, etc."
 msgstr ""
 "Debhelper incluye la compatibilidad con paquetes udeb. Para crear un udeb "
@@ -2872,7 +2872,7 @@ msgid ""
 "command for the build system it detects the package uses.  For example, it "
 "looks for and runs a F<./configure> script, F<Makefile.PL>, F<Build.PL>, or "
 "F<cmake>. A standard set of parameters is determined and passed to the "
-"program that is run. Some build systems, such as make, do not need a "
+"program that is run. Some build systems, such as make, do no need a "
 "configure step; for these B<dh_auto_configure> will exit without doing "
 "anything."
 msgstr ""
@@ -4923,7 +4923,7 @@ msgstr "Lista los directorios a crear en I<paquete>."
 #. type: textblock
 #: dh_installdirs:34
 msgid ""
-"Generally, there is not need to list directories created by the upstream "
+"Generally, there is no need to list directories created by the upstream "
 "build system or directories needed by other B<debhelper> commands."
 msgstr ""
 
@@ -5827,7 +5827,7 @@ msgid ""
 "Remove trailing B<d> from the name of the package, and use the result for "
 "the filename the upstart job file is installed as in F<etc/init/> , and for "
 "the filename the init script is installed as in etc/init.d and the default "
-"file is installed as in F<etc/default/> . This may be useful for daemons "
+"file is installed as in F<etc/default/>. This may be useful for daemons "
 "with names ending in B<d>. (Note: this takes precedence over the B<--init-"
 "script> parameter described below.)"
 msgstr ""
@@ -8341,7 +8341,7 @@ msgstr ""
 #: dh_strip:105
 msgid ""
 "Once the Debian archive supports ddebs, debhelper will generate ddebs by "
-"default.  Until then, this option does nothing except allow you to pre-"
+"default.  Until then, this option does nothing except to allow you to pre-"
 "emptively disable ddebs if you know the generated ddebs will not work for "
 "your package."
 msgstr ""
@@ -8351,7 +8351,7 @@ msgstr ""
 msgid ""
 "If you want to test the ddebs feature, you can set the environment variable "
 "I<DH_BUILD_DDEBS> to 1.  Keep in mind that the Debian archive does B<not> "
-"accept them yet.  This variable is only a temporary safe guard and will be "
+"accept them yet.  This variable is only a temporary safeguard and will be "
 "removed once the archive is ready to accept ddebs."
 msgstr ""
 
@@ -9053,7 +9053,7 @@ msgstr "Andrew Stribblehill <ads@debian.org>"
 
 #~ msgid ""
 #~ "Note that in the example above, dh will arrange for \"debian/rules build"
-#~ "\" to call your build-indep and build-arch targets. You do not need to "
+#~ "\" to call your build-indep and build-arch targets. You do no need to "
 #~ "explicitly define those dependencies in the rules file when using dh with "
 #~ "compatibility level v9. This example would be more complicated with "
 #~ "earlier compatibility levels."
@@ -9080,7 +9080,7 @@ msgstr "Andrew Stribblehill <ads@debian.org>"
 
 #~ msgid ""
 #~ "Note that in the example above, dh will arrange for \"debian/rules build"
-#~ "\" to call your build-indep and build-arch targets. You do not need to "
+#~ "\" to call your build-indep and build-arch targets. You do no need to "
 #~ "explicitly define the dependencies in the rules file when using dh with "
 #~ "compatibility level v9. This example would be more complicated with "
 #~ "earlier compatibility levels."
