--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -669,7 +669,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:243
 msgid ""
-"If neither option are not specified, debhelper currently defaults to B<--"
+"If neither option is specified, debhelper currently defaults to B<--"
 "parallel> in compat 10 (or later) and B<--no-parallel> otherwise."
 msgstr ""
 "Se nenhuma destas opções for especificada, presentemente o debhelper usa por "
@@ -1571,11 +1571,11 @@ msgstr "udebs"
 #. type: textblock
 #: debhelper.pod:680
 msgid ""
-"Debhelper includes support for udebs. To create a udeb with debhelper, add "
+"Debhelper includes support for udebs. To create an udeb with debhelper, add "
 "\"B<Package-Type: udeb>\" to the package's stanza in F<debian/control>.  "
 "Debhelper will try to create udebs that comply with debian-installer policy, "
 "by making the generated package files end in F<.udeb>, not installing any "
-"documentation into a udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
+"documentation into an udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
 "and F<config> scripts, etc."
 msgstr ""
 "Debhelper inclui suporte para udebs. Para criar um udeb com o debhelper, "
@@ -2710,7 +2710,7 @@ msgid ""
 "command for the build system it detects the package uses.  For example, it "
 "looks for and runs a F<./configure> script, F<Makefile.PL>, F<Build.PL>, or "
 "F<cmake>. A standard set of parameters is determined and passed to the "
-"program that is run. Some build systems, such as make, do not need a "
+"program that is run. Some build systems, such as make, do no need a "
 "configure step; for these B<dh_auto_configure> will exit without doing "
 "anything."
 msgstr ""
@@ -4596,7 +4596,7 @@ msgstr "Lista directórios a serem criados em I<pacote>."
 #. type: textblock
 #: dh_installdirs:34
 msgid ""
-"Generally, there is not need to list directories created by the upstream "
+"Generally, there is no need to list directories created by the upstream "
 "build system or directories needed by other B<debhelper> commands."
 msgstr ""
 "Geralmente, não há necessidade de listar os directórios criados pelo sistema "
@@ -5417,21 +5417,21 @@ msgstr ""
 msgid "B<-d>, B<--remove-d>"
 msgstr "B<-d>, B<--remove-d>"
 
-# FIXME s#F<etc/default/> .#F<etc/default/>.#
+# FIXME s#F<etc/default/>.#F<etc/default/>.#
 #. type: textblock
 #: dh_installinit:106
 msgid ""
 "Remove trailing B<d> from the name of the package, and use the result for "
 "the filename the upstart job file is installed as in F<etc/init/> , and for "
 "the filename the init script is installed as in etc/init.d and the default "
-"file is installed as in F<etc/default/> . This may be useful for daemons "
+"file is installed as in F<etc/default/>. This may be useful for daemons "
 "with names ending in B<d>. (Note: this takes precedence over the B<--init-"
 "script> parameter described below.)"
 msgstr ""
 "Remove o B<d> final do nome do pacote, e usa o resultado para o nome do "
 "ficheiro de trabalho upstar que é instalado em F<etc/init/> , e para o nome "
 "do ficheiro de script de iniciação que é instalado em etc/init.d e o "
-"ficheiro predefinido é instalado em F<etc/default/> . Isto pode ser útil "
+"ficheiro predefinido é instalado em F<etc/default/>. Isto pode ser útil "
 "para daemons com nomes que terminam em B<d>. (Note: isto toma precedência "
 "sobre o parâmetro B<--init-script> descrito em baixo)."
 
@@ -7713,7 +7713,7 @@ msgstr "Controla se o B<dh_strip> deve criar ddebs quando possível."
 #: dh_strip:105
 msgid ""
 "Once the Debian archive supports ddebs, debhelper will generate ddebs by "
-"default.  Until then, this option does nothing except allow you to pre-"
+"default.  Until then, this option does nothing except to allow you to pre-"
 "emptively disable ddebs if you know the generated ddebs will not work for "
 "your package."
 msgstr ""
@@ -7727,7 +7727,7 @@ msgstr ""
 msgid ""
 "If you want to test the ddebs feature, you can set the environment variable "
 "I<DH_BUILD_DDEBS> to 1.  Keep in mind that the Debian archive does B<not> "
-"accept them yet.  This variable is only a temporary safe guard and will be "
+"accept them yet.  This variable is only a temporary safeguard and will be "
 "removed once the archive is ready to accept ddebs."
 msgstr ""
 "Se desejar testar a funcionalidade ddebs, você pode definir a variável de "
