--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
 debhelper (9.20151005) unstable; urgency=medium
 
+  [ Niels Thykier ]
   * dh_strip: Sort build-ids to make the Build-Ids header
     reproducible.
   * Dh_Lib.pm: Respect --no-act in autotrigger, thanks to
     Andreas Henriksson and Helmut Grohne for reporting
     the issue.  (Closes: #800919)
+  * Fix typos in various manpages.  Thanks to Chris Leick
+    for reporting them.
+
+  [ Translations ]
+  * Update German translation (Chris Leick)
+    (Closes: #802198)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 05 Oct 2015 08:33:26 +0200
 
