Fix typos in po file
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -2710,7 +2710,7 @@ msgid ""
 "command for the build system it detects the package uses.  For example, it "
 "looks for and runs a F<./configure> script, F<Makefile.PL>, F<Build.PL>, or "
 "F<cmake>. A standard set of parameters is determined and passed to the "
-"program that is run. Some build systems, such as make, do no need a "
+"program that is run. Some build systems, such as make, do not need a "
 "configure step; for these B<dh_auto_configure> will exit without doing "
 "anything."
 msgstr ""
