dh_clean: Preserve debian/.debhelper with -d
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ debhelper (9.20151005) unstable; urgency=medium
     the issue.  (Closes: #800919)
   * Fix typos in various manpages.  Thanks to Chris Leick
     for reporting them.
+  * dh_clean: Avoid cleaning up debian/.debhelper when
+    passed the "-d" flag.
 
   [ Translations ]
   * Update German translation (Chris Leick)
