Don't swallow $@ when configure() fails, for accurate error reporting.
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ debhelper (9.20151005) unstable; urgency=medium
   * dh_installinit: The postinst snippets are now only run
     during "configure" or "abort-upgrade".
     (Closes: #188028)
+  * cmake.pm: Apply patch from Jonathan Hall to fix an
+    accidental error hiding.  (Closes: #802984)
 
   [ Translations ]
   * Update German translation (Chris Leick)
