Undo s/a udeb/an udeb/
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -1567,15 +1567,15 @@ msgstr ""
 msgid "udebs"
 msgstr "udebs"
 
-# FIXME : an udeb
+# FIXME : a udeb
 #. type: textblock
 #: debhelper.pod:680
 msgid ""
-"Debhelper includes support for udebs. To create an udeb with debhelper, add "
+"Debhelper includes support for udebs. To create a udeb with debhelper, add "
 "\"B<Package-Type: udeb>\" to the package's stanza in F<debian/control>.  "
 "Debhelper will try to create udebs that comply with debian-installer policy, "
 "by making the generated package files end in F<.udeb>, not installing any "
-"documentation into an udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
+"documentation into a udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
 "and F<config> scripts, etc."
 msgstr ""
 "Debhelper inclui suporte para udebs. Para criar um udeb com o debhelper, "
