--- a/debhelper.pod
+++ b/debhelper.pod
@@ -644,11 +644,11 @@ act on.
 
 =head2 udebs
 
-Debhelper includes support for udebs. To create an udeb with debhelper,
+Debhelper includes support for udebs. To create a udeb with debhelper,
 add "B<Package-Type: udeb>" to the package's stanza in F<debian/control>.
 Debhelper will try to create udebs that comply with debian-installer
 policy, by making the generated package files end in F<.udeb>, not
-installing any documentation into an udeb, skipping over
+installing any documentation into a udeb, skipping over
 F<preinst>, F<postrm>, F<prerm>, and F<config> scripts, etc.
 
 =head1 ENVIRONMENT
