--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -1166,11 +1166,11 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:680
 msgid ""
-"Debhelper includes support for udebs. To create an udeb with debhelper, add "
+"Debhelper includes support for udebs. To create a udeb with debhelper, add "
 "\"B<Package-Type: udeb>\" to the package's stanza in F<debian/control>.  "
 "Debhelper will try to create udebs that comply with debian-installer policy, "
 "by making the generated package files end in F<.udeb>, not installing any "
-"documentation into an udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
+"documentation into a udeb, skipping over F<preinst>, F<postrm>, F<prerm>, "
 "and F<config> scripts, etc."
 msgstr ""
 
