--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ debhelper (9.20151005) unstable; urgency=medium
   * dh_clean: Avoid cleaning up debian/.debhelper when
     passed the "-d" flag.
   * Dh_Lib.pm: Reject compat levels earlier than 3.
+  * dh_clean: Support removal of directory (plus contents)
+    when they are marked with a trailing slash.
+    (Closes: #511048)
 
   [ Translations ]
   * Update German translation (Chris Leick)
