Add changelog entry for Niko Tyni's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ debhelper (9.20151005) unstable; urgency=medium
   * dh_clean: Support removal of directory (plus contents)
     when they are marked with a trailing slash.
     (Closes: #511048)
+  * dh_install,dh_installdocs,dh_installexamples: Apply
+    patches from Niko Tyni to make timestamp of directories
+    created from "find"-pipelines reproducible.
+    (Closes: #802005)
 
   [ Translations ]
   * Update German translation (Chris Leick)
