dh_installinit: Disable init scripts on removal
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (9.20151005) unstable; urgency=medium
   * qmake.pm: Apply patch from Sergio Durigan Junior to
     create the build dir if it doesn't exist.
     (Closes: #800738)
+  * dh_installinit: Disable initscripts when a package is
+    removed (but not yet purged).  (Closes: #749400)
 
   [ Translations ]
   * Update German translation (Chris Leick)
